# sephiroth

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml  pypi-publish.yml
src/sephiroth/: __init__.py  main.py
src/sephiroth/providers/: __init__.py  asn.py  aws.py  azure.py  cloudflare.py  do.py  file.py  gcp.py  linode.py  oci.py  provider.py  remote_file.py  tor.py  vultr.py
src/sephiroth/templates/caddy/: conf.jinja  help.jinja
