[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sephiroth"
dynamic = ["version"]
authors = [
    { name = "0xdade", email = "dade@actualcrimes.org" }
]
maintainers = [
    { name = "0xdade", email = "dade@actualcrimes.org" }
]
description = "Utility for building blocklists for IP ranges"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["blocklists", "ip", "security"]
dependencies = [
    "beautifulsoup4 ~= 4.11.1",
    "requests ~= 2.27.1",
    "Jinja2 ~= 3.1.1",
    "netaddr~=0.8.0"
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

]

[project.urls]
Homepage = "https://github.com/0xdade/sephiroth"
Repository = "https://github.com/0xdade/sephiroth.git"

[project.scripts]
sephiroth = "sephiroth.main:main"

[tool.hatch.build]
source = "src"

[tool.hatch.version]
path = "src/sephiroth/__init__.py"

[tool.hatch.build.targets.sdist]
packages = ["src/sephiroth"]

[tool.hatch.build.targets.wheel]
packages = ["src/sephiroth"]
