[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {email = "dade@actualcrimes.org", name = "0xdade"}
]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.9"
]
dependencies = [
  "beautifulsoup4>=4.11",
  "jinja2>=3.1",
  "netaddr>=0.8",
  "requests>=2.27"
]
description = "Utility for building blocklists for IP ranges"
dynamic = ["version"]
keywords = ["blocklists", "ip", "security"]
maintainers = [
  {email = "dade@actualcrimes.org", name = "0xdade"}
]
name = "sephiroth"
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
sephiroth = "sephiroth.main:main"

[project.urls]
Homepage = "https://github.com/0xdade/sephiroth"
Repository = "https://github.com/0xdade/sephiroth.git"

[tool.hatch.build]
source = "src"

[tool.hatch.build.targets.sdist]
packages = ["src/sephiroth"]

[tool.hatch.build.targets.wheel]
packages = ["src/sephiroth"]

[tool.hatch.version]
path = "src/sephiroth/__init__.py"

[tool.ruff.lint]
select = [
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # pyflakes
  "F",
  # flynt
  "FLY",
  # isort
  "I",
  # pylint
  "PL",
  # flake8-return
  "RET",
  # Ruff's own rules
  "RUF",
  # flake8-simplify
  "SIM",
  # flake8-tidy-imports
  "TID",
  # pyupgrade
  "UP"
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
